--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -26,6 +26,20 @@ publisher = {Cambridge University Press},
 year = {2006},
 }
 
+@INPROCEEDINGS{koliopanos:2017,
+       author = {{Koliopanos}, F.},
+        title = "{Intermediate Mass Black Holes: A Review}",
+     keywords = {Astrophysics - Astrophysics of Galaxies},
+    booktitle = {Proceedings of the XII Multifrequency Behaviour of High Energy Cosmic Sources Workshop. 12-17 June},
+         year = 2017,
+        month = Jun,
+          eid = {51},
+        pages = {51},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2017mbhe.confE..51K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @INPROCEEDINGS{casares:2007,
    author = {{Casares}, J.},
     title = "{Observational evidence for stellar-mass black holes}",
@@ -34,7 +48,7 @@ booktitle = {Black Holes from Stars to Galaxies -- Across the Range of Masses},
    series = {IAU Symposium},
    volume = 238,
    eprint = {astro-ph/0612312},
-   editor = {{Karas}, V. and {Matt}, G.},
+%   editor = {{Karas}, V. and {Matt}, G.},
     month = apr,
     pages = {3-12},
       doi = {10.1017/S1743921307004590},
@@ -106,7 +120,7 @@ booktitle = {Astrophysics of Black Holes: From Fundamental Aspects to Latest Dev
 archivePrefix = "arXiv",
    eprint = {1507.06153},
  primaryClass = "astro-ph.HE",
-   editor = {{Bambi}, C.},
+%   editor = {{Bambi}, C.},
     pages = {99},
       doi = {10.1007/978-3-662-52859-4_3},
    adsurl = {http://adsabs.harvard.edu/abs/2016ASSL..440...99M},
