--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -1,7 +1,9 @@
 @BOOK{gravity,
    author = {{Poisson}, E. and {Will}, C.~M.},
     title = "{Gravity}",
-booktitle = {Gravity, by Eric Poisson , Clifford M.~Will, Cambridge, UK: Cambridge University Press, 2014},
+%booktitle = {Gravity, by Eric Poisson , Clifford M.~Will, Cambridge, UK: Cambridge University Press, 2014},
+  address = {Cambridge},
+publisher = {Cambridge University Press},
      year = 2014,
     month = may,
    adsurl = {http://adsabs.harvard.edu/abs/2014grav.book.....P},
@@ -9,21 +11,36 @@ booktitle = {Gravity, by Eric Poisson , Clifford M.~Will, Cambridge, UK: Cambrid
 }
 
 @book{bhphysics,
-title = {Introduction to black hole physics},
-author = {Frolov, V.~P. and Zelnikov, A.},
-editor = {Zelnikov, Andrei},
-address = {Oxford ; New York},
+    title = "{Introduction to black hole physics}",
+   author = {Frolov, V.~P. and Zelnikov, A.},
+   editor = {Zelnikov, Andrei},
+  address = {Oxford ; New York},
 publisher = {Oxford University Press},
-year = {2011},
-pages = {488}
+     year = {2011},
+    pages = {488}
 }
 
 @book{grintro,
-title = {General relativity : an introduction for physicists},
-author = {Hobson, M.~P. and Efstathiou, G.~P. and Lasenby, A.~N.},
-address = {Cambridge ; New York},
+    title = "{General relativity : an introduction for physicists}",
+   author = {Hobson, M.~P. and Efstathiou, G.~P. and Lasenby, A.~N.},
+  address = {Cambridge ; New York},
 publisher = {Cambridge University Press},
-year = {2006},
+     year = {2006},
+}
+
+@ARTICLE{mezcua:2017,
+       author = {{Mezcua}, M.},
+        title = "{Observational evidence for intermediate-mass black holes}",
+      journal = {International Journal of Modern Physics D},
+         year = 2017,
+        month = Jan,
+       volume = {26},
+          eid = {1730021},
+        pages = {1730021},
+          doi = {10.1142/S021827181730021X},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2017IJMPD..2630021M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @INPROCEEDINGS{koliopanos:2017,
@@ -81,7 +98,7 @@ booktitle = {Black Holes from Stars to Galaxies -- Across the Range of Masses},
     month = mar,
    volume = 9,
       eid = {3},
-    pages = {3},
+%    pages = {3},
       doi = {10.12942/lrr-2006-3},
    adsurl = {http://adsabs.harvard.edu/abs/2006LRR.....9....3W},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -119,7 +136,7 @@ booktitle = {Astrophysics of Black Holes: From Fundamental Aspects to Latest Dev
    volume = 440,
 archivePrefix = "arXiv",
    eprint = {1507.06153},
- primaryClass = "astro-ph.HE",
+primaryClass = "astro-ph.HE",
 %   editor = {{Bambi}, C.},
     pages = {99},
       doi = {10.1007/978-3-662-52859-4_3},
@@ -140,20 +157,20 @@ archivePrefix = "arXiv",
 }
 
 @book{galaxies,
-title = {Galaxies in the Universe : An Introduction},
-author = {Sparke, Linda S. and Gallagher III, John S.},
-address = {Cambridge : New York},
+    title = "{Galaxies in the Universe : An Introduction}",
+   author = {Sparke, Linda S. and Gallagher III, John S.},
+  address = {Cambridge : New York},
 publisher = {Cambridge University Press},
-year = {2007},
-edition = {2nd},
-note = {Previous ed.: 2000.},
+     year = {2007},
+  edition = {2nd},
+     note = {Previous ed.: 2000.},
 }
 
 @book{galform,
-title = {Galaxy Formation and Evolution},
-author = {Mo, H. and van den Bosch, F. and White, S.},
-address = {Cambridge ; New York},
+    title = "{Galaxy Formation and Evolution}",
+   author = {Mo, H. and van den Bosch, F. and White, S.},
+  address = {Cambridge ; New York},
 publisher = {Cambridge University Press},
-year = {2010},
+     year = {2010},
 }
 
