--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -227,8 +227,6 @@ where $c$ is the speed of light, $G$ is the gravitational constant, $M$ is the m
 
 A so called `seed' black hole between the mass of $100 M_\odot$ and $10^6 M_\odot$ would require over 0.5 Gyr to grow into a $10^9 M_\odot$ supermassive black hole, given it constantly grows at Eddington rate. Due to this fact, the observed existence of supermassive black holes of that size when the universe was around 1 Gyr old implies that these seed black holes must have formed at redshifts larger than 10. In such a young universe there are several ways that intermediate mass black holes could form \citep{mezcua:2017}. These methods are illustrated in figure \ref{fig:imbhs}.
 
-One way for these kinds of black holes to form could be through massive Population III stars. These stars formed early in the universe and thus they had very low metallicities. This allows them to grow very large, and the mass of Pop III stars can exceed 200 solar masses. These stars can also retain their mass as they exhibit weaker stellar winds compared to more metal-rich stars. When these stars collapse in a similar manner to lower mass stars, they could then form black holes with masses of several hundred $M_\odot$. These kinds of black holes would still be relatively light, requiring super-Eddington accretion rates to reach the observed masses at around redshift 6. To circumvent this problem, the seed black holes would need to be more massive from the start. Black holes could also form inside the first protogalaxies by direct collapse of gas. In this kind of environment the gas could form supermassive stars of the magnitude $10^5 M_\odot$, which could collapse into black holes of $10^4 - 10^5 M_\odot$. Another prediction for their formation is through multiple mergers in dense stellar clusters. In a dense region of stars, multiple subsequent mergers can cause the formation of supermassive stars that will collapse into black holes of $10^2 - 10^4 M_\odot$.
-
 \begin{figure}[h!tb]
 \centering
 \includegraphics[width=\textwidth]{../images/imbhs.pdf}
@@ -237,12 +235,15 @@ One way for these kinds of black holes to form could be through massive Populati
 \label{fig:imbhs}
 \end{figure}
 
-%TODO havaintohommaa, mebbe G1
+One way for these kinds of black holes to form could be through massive Population III stars. These stars formed early in the universe and thus they had very low metallicities. This allows them to grow very large, and the mass of Pop III stars can exceed 200 solar masses. These stars can also retain their mass as they exhibit weaker stellar winds compared to more metal-rich stars. When these stars collapse in a similar manner to lower mass stars, they could then form black holes with masses of several hundred $M_\odot$. These kinds of black holes would still be relatively light, requiring super-Eddington accretion rates to reach the observed masses at around redshift 6. To circumvent this problem, the seed black holes would need to be more massive from the start. Black holes could also form inside the first protogalaxies by direct collapse of gas. In this kind of environment the gas could form supermassive stars of the magnitude $10^5 M_\odot$, which could collapse into black holes of $10^4 - 10^5 M_\odot$. Another prediction for their formation is through multiple mergers in dense stellar clusters. In a dense region of stars, multiple subsequent mergers can cause the formation of supermassive stars that will collapse into black holes of $10^2 - 10^4 M_\odot$.
+
+To figure out whether intermediate mass black holes exist or not, we need to measure the mass of candidate black holes. Using stellar or gas dynamics to probe the mass this is the most accurate way of measuring it. Although with our current instruments this method only works on relatively nearby objects. A black hole of $10^5 M_\odot$ has a sphere of influence of about 0.5 pc, and cannot be resolved beyond a megaparsec. In addition to kinematics, radiation signatures such as X-ray and radio emissions can be used to ascertain whether an object is a black hole and what its mass is. One of the best current candidates for an intermediate mass black hole is the central object in the globular cluster G1. Both X-ray and radio emissions have been detected there, and photometric and kinematic observations have given an estimate for a black hole with a mass of around $1.8 \times 10^4 M_\odot$ \citep{gebhardt:2005}.
 
 \subsection{Supermassive black holes}
 
 
 %TODO lisää kuva linnunradan keskuksen likeisistä tähdistä, vahva todiste mustasta aukosta
+%korrelaatio massan ja ytimen ominaisuuksien välillä?
 
 \section{Newtonian dynamics}
 
