--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -28,6 +28,21 @@ publisher = {Cambridge University Press},
      year = {2006},
 }
 
+@ARTICLE{gebhardt:2005,
+   author = {{Gebhardt}, K. and {Rich}, R.~M. and {Ho}, L.~C.},
+    title = "{An Intermediate-Mass Black Hole in the Globular Cluster G1: Improved Significance from New Keck and Hubble Space Telescope Observations}",
+  journal = {ApJ},
+   eprint = {astro-ph/0508251},
+ keywords = {Galaxies: Individual: Messier Number: M31, Galaxies: Star Clusters, Galaxy: Globular Clusters: General, globular clusters: individual (Mayall II ), globular clusters: individual ( G1)},
+     year = 2005,
+    month = dec,
+   volume = 634,
+    pages = {1093-1102},
+      doi = {10.1086/497023},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...634.1093G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{mezcua:2017,
        author = {{Mezcua}, M.},
         title = "{Observational evidence for intermediate-mass black holes}",
